--- a/main.css
+++ b/main.css
@@ -51,7 +51,8 @@ body {
     background-position: center center;
     width: 100%;
     height: 100%;
-    transform: rotate(45deg) scale(1.4);
+    /* √2 */
+    transform: rotate(45deg) scale(1.42);
 }
 
 .text {
